--- a/README
+++ b/README
@@ -8,43 +8,7 @@ Requirements:
 - Python 3.1 or higher
 
 
-Installation:
--------------
+How to use:
+-----------
 
-Platform indipendent:
-
-1. If you don't have already, create a blender-scripts folder somewhere on your hard disc. Within that folder create an "addons" folder.
-2. Copy the folder io_xplane2blender into the "addons" folder.
-3. Open up Blender, go to File > User preferences > File and there select the previously created blender-scripts folder under "Scripts"
-4. Close Blender and continue with Activation described below.
-
-
-Windows (alternative method):
-
-Depending on what option you have choosen during installation you must place the folder io_xplane2blender and its contents in different directories:
-- "Use the Application Data directory": If you've choosen this option place io_xplane2blender into "[Documents and Settings]\[user]\[Application data]\Blender Foundation\Blender\2.5x\scripts\addons"
-- "Use installation directory": If you've choosen this option place io_xplane2blender into "[Path to installed Blender]\2.5x\scripts\addons". The path to the installed Blender is usually "C:\Programs\Blender Foundation\Blender".
-- "I have defined a %HOME% variable, please install files here.": If you've choosen this options place io_xplane2blender into "[%HOME%]\Blender Foundation\Blender\2.5x\scripts\addons".
-Contiunue with the Activation described below.
-
-
-Activation:
-1. Open up Blender and go to File > User preferences
-2. In User preferences open up the Tab "Add-Ons" and scroll down the list till you see "Import/Export: Import/Export XPlane".
-3. Click the checkbox right to this entry. If no error occurs in your console, you've successfully activated XPlane2Blender.
-
-
-Usage:
-------
-
-After activation you will find an additional "X-Plane" panels in various places in the Property window:
-- All Objects will have this panel in the Object context/tab.
-- All Mesh-Objects will have this panel in the Material context/tab.
-- All Bones will have this panel in the Bone context/tab.
-- All Lamps will have this panel in the Lamp context/tab.
-- All Scenes will have this panel in the Scene context/tab.
-
-Before you can start to export Blender scenes to OBJ files you need to create the X-Plane layers within each scene you want to export under the Scene context/tab.
-
-However the panel contents will vary from Object-Type.
-As UI-Paradigms are not entirely finished now this is also subject to change.
+All documentation is located here: https://github.com/der-On/XPlane2Blender/wiki/3.2x-Documentation
