--- a/README
+++ b/README
@@ -1,10 +1,10 @@
-This addon for Blender 2.5x makes it possible to export Objects to the X-Plane object format (.obj).
+This addon for Blender 2.6x makes it possible to export Objects to the X-Plane object format (.obj).
 
 
 Requirements:
 -------------
 
-- Blender 2.57a or higher
+- Blender 2.69 or higher
 - Python 3.1 or higher
 
 
