--- a/README
+++ b/README
@@ -11,4 +11,4 @@ Requirements:
 How to use:
 -----------
 
-All documentation is located here: https://github.com/der-On/XPlane2Blender/wiki/3.2x-Documentation
+All documentation is located here: https://github.com/der-On/XPlane2Blender/wiki/docs-3.2x-main
